--- a/visualize_mots.ipynb
+++ b/visualize_mots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "42fafdda-9b10-4e2a-871f-e36a153ed85e",
    "metadata": {},
    "outputs": [],
@@ -19,111 +19,14 @@
     "from PIL import Image\n",
     "from multiprocessing import Pool\n",
     "from mots_tools.mots_common.io import load_sequences, load_seqmap\n",
+    "from mots_tools.mots_vis.visualize_mots import generate_colors\n",
     "from functools import partial\n",
     "from subprocess import call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "151f895f-e9ec-4916-9ffd-6da3aec9a61e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# adapted from https://github.com/matterport/Mask_RCNN/blob/master/mrcnn/visualize.py\n",
-    "def generate_colors():\n",
-    "  \"\"\"\n",
-    "  Generate random colors.\n",
-    "  To get visually distinct colors, generate them in HSV space then\n",
-    "  convert to RGB.\n",
-    "  \"\"\"\n",
-    "  N = 30\n",
-    "  brightness = 0.7\n",
-    "  hsv = [(i / N, 1, brightness) for i in range(N)]\n",
-    "  colors = list(map(lambda c: colorsys.hsv_to_rgb(*c), hsv))\n",
-    "  perm = [15, 13, 25, 12, 19, 8, 22, 24, 29, 17, 28, 20, 2, 27, 11, 26, 21, 4, 3, 18, 9, 5, 14, 1, 16, 0, 23, 7, 6, 10]\n",
-    "  colors = [colors[idx] for idx in perm]\n",
-    "  return colors\n",
-    "\n",
-    "\n",
-    "# from https://github.com/matterport/Mask_RCNN/blob/master/mrcnn/visualize.py\n",
-    "def apply_mask(image, mask, color, alpha=0.5):\n",
-    "  \"\"\"Apply the given mask to the image.\n",
-    "  \"\"\"\n",
-    "  for c in range(3):\n",
-    "    image[:, :, c] = np.where(mask == 1,\n",
-    "                              image[:, :, c] * (1 - alpha) + alpha * color[c],\n",
-    "                              image[:, :, c])\n",
-    "  return image\n",
-    "\n",
-    "\n",
-    "def process_sequence(seq_id, tracks_folder, img_folder, output_folder, max_frames, draw_boxes=False,\n",
-    "                     create_video=True):\n",
-    "  print(\"Processing sequence\", seq_id)\n",
-    "  os.makedirs(output_folder + \"/\" + seq_id, exist_ok=True)\n",
-    "  tracks = load_sequences(tracks_folder, [seq_id])[seq_id]\n",
-    "  max_frames_seq = max_frames[seq_id]\n",
-    "  visualize_sequences(seq_id, tracks, max_frames_seq, img_folder, output_folder, draw_boxes, create_video)\n",
-    "\n",
-    "\n",
-    "def visualize_sequences(seq_id, tracks, max_frames_seq, img_folder, output_folder, draw_boxes=False, create_video=True):\n",
-    "  colors = generate_colors()\n",
-    "  dpi = 100.0\n",
-    "  frames_with_annotations = [frame for frame in tracks.keys() if len(tracks[frame]) > 0]\n",
-    "  img_sizes = next(iter(tracks[frames_with_annotations[0]])).mask[\"size\"]\n",
-    "  for t in range(max_frames_seq + 1):\n",
-    "    print(\"Processing frame\", t)\n",
-    "    filename_t = img_folder + \"/\" + seq_id + \"/%06d\" % t\n",
-    "    if os.path.exists(filename_t + \".png\"):\n",
-    "      filename_t = filename_t + \".png\"\n",
-    "    elif os.path.exists(filename_t + \".jpg\"):\n",
-    "      filename_t = filename_t + \".jpg\"\n",
-    "    else:\n",
-    "      print(\"Image file not found for \" + filename_t + \".png/.jpg, continuing...\")\n",
-    "      continue\n",
-    "    img = np.array(Image.open(filename_t), dtype=\"float32\") / 255\n",
-    "    fig = plt.figure()\n",
-    "    fig.set_size_inches(img_sizes[1] / dpi, img_sizes[0] / dpi, forward=True)\n",
-    "    fig.subplots_adjust(left=0, bottom=0, right=1, top=1, wspace=None, hspace=None)\n",
-    "    ax = fig.subplots()\n",
-    "    ax.set_axis_off()\n",
-    "\n",
-    "    if t in tracks:\n",
-    "      for obj in tracks[t]:\n",
-    "        color = colors[obj.track_id % len(colors)]\n",
-    "        if obj.class_id == 1:\n",
-    "          category_name = \"Car\"\n",
-    "        elif obj.class_id == 2:\n",
-    "          category_name = \"Pedestrian\"\n",
-    "        else:\n",
-    "          category_name = \"Ignore\"\n",
-    "          color = (0.7, 0.7, 0.7)\n",
-    "        if obj.class_id == 1 or obj.class_id == 2:  # Don't show boxes or ids for ignore regions\n",
-    "          x, y, w, h = rletools.toBbox(obj.mask)\n",
-    "          if draw_boxes:\n",
-    "            import matplotlib.patches as patches\n",
-    "            rect = patches.Rectangle((x, y), w, h, linewidth=1,\n",
-    "                                     edgecolor=color, facecolor='none', alpha=1.0)\n",
-    "            ax.add_patch(rect)\n",
-    "          category_name += \":\" + str(obj.track_id)\n",
-    "          ax.annotate(category_name, (x + 0.5 * w, y + 0.5 * h), color=color, weight='bold',\n",
-    "                      fontsize=7, ha='center', va='center', alpha=1.0)\n",
-    "        binary_mask = rletools.decode(obj.mask)\n",
-    "        apply_mask(img, binary_mask, color)\n",
-    "\n",
-    "    ax.imshow(img)\n",
-    "    fig.savefig(output_folder + \"/\" + seq_id + \"/%06d\" % t + \".jpg\")\n",
-    "    plt.close(fig)\n",
-    "  if create_video:\n",
-    "    os.chdir(output_folder + \"/\" + seq_id)\n",
-    "    call([\"ffmpeg\", \"-framerate\", \"10\", \"-y\", \"-i\", \"%06d.jpg\", \"-c:v\", \"libx264\", \"-profile:v\", \"high\", \"-crf\", \"20\",\n",
-    "          \"-pix_fmt\", \"yuv420p\", \"-vf\", \"pad=\\'width=ceil(iw/2)*2:height=ceil(ih/2)*2\\'\", \"output.mp4\"])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "195b034a-b3da-435d-bb4c-b286ca794c61",
    "metadata": {},
    "outputs": [],
@@ -134,10 +37,7 @@
     "    os.makedirs(output_folder + \"/\" + seq_id, exist_ok=True)\n",
     "    tracks = load_sequences(tracks_folder, [seq_id])[seq_id]\n",
     "    max_frames_seq = max_frames[seq_id]\n",
-    "    visualize_sequences_2(seq_id, tracks, max_frames_seq, img_folder, output_folder, draw_boxes, create_video)\n",
     "\n",
-    "\n",
-    "def visualize_sequences_2(seq_id, tracks, max_frames_seq, img_folder, output_folder, draw_boxes=False, create_video=True):\n",
     "    if not os.path.exists(os.path.join(output_folder, 'sequences', seq_id)):\n",
     "        os.makedirs(os.path.join(output_folder, 'sequences', seq_id))\n",
     "    colors = generate_colors()\n",
@@ -189,7 +89,7 @@
     "                #               fontsize=7, ha='center', va='center', alpha=1.0)\n",
     "                # binary_mask = rletools.decode(obj.mask)\n",
     "                # apply_mask(img, binary_mask, color)\n",
-    "                plt.close(fig)\n",
+    "                    plt.close(fig)\n",
     "\n",
     "        # ax.imshow(img)\n",
     "        # fig.savefig(output_folder + \"/\" + seq_id + \"/%06d\" % t + \".jpg\")\n",
@@ -204,9 +104,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d022cbb3-255f-4f1d-8bae-50cb2355ce97",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tracks_folder = './kitti-mots/instances_txt'\n",
@@ -226,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2e7cb330-dc77-42e3-bf87-2fac1e812527",
    "metadata": {},
    "outputs": [],
@@ -238,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "34863dfc-18eb-4d30-a180-97df2308142a",
    "metadata": {},
    "outputs": [],
@@ -251,28 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8c4ee566-cacd-4b31-b31a-80bebc94be50",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda', index=0)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3af63397-e503-459f-8f4d-def6801d5976",
    "metadata": {},
    "outputs": [],
@@ -286,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "419a5611-2af5-48d0-a89f-7f26e424c65a",
    "metadata": {},
    "outputs": [],
@@ -330,43 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "30329c0e-c99c-4519-8e69-341d9eebcffb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading seqmap...\n",
-      "GPU: True\n",
-      "Processing sequence 0000\n",
-      "Loading sequence 0000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 154/154 [00:05<00:00, 30.07it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing sequence 0020\n",
-      "Loading sequence 0020\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 837/837 [01:10<00:00, 11.95it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tracks_folder = './kitti-mots/instances_txt'\n",
     "img_folder = './kitti-mots/data_tracking_image_2/training/image_02/'\n",
@@ -385,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "88fbdfff-8e80-4c69-b3db-9a7acfd18c98",
    "metadata": {
     "editable": true,
@@ -401,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0e026a8b-19d9-4e08-a496-e9bf45149915",
    "metadata": {},
    "outputs": [],
@@ -411,32 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "666d82b4-e2f1-4002-bffe-fe8058b450aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function pinecone.manage.create_index(name: str, dimension: int, timeout: int = None, index_type: str = 'approximated', metric: str = 'cosine', replicas: int = 1, shards: int = 1, pods: int = 1, pod_type: str = 'p1', index_config: dict = None, metadata_config: dict = None, source_collection: str = '')>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pinecone.create_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5cbefbab-d668-4b1a-9e46-0c4b2b847064",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pinecone.create_index(\"tracks\", dimension=512, metric=\"euclidean\")\n",
@@ -445,28 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e76b811d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "IndexDescription(name='tracks', metric='euclidean', replicas=1, dimension=512.0, shards=1, pods=1, pod_type='starter', status={'ready': True, 'state': 'Ready'}, metadata_config=None, source_collection='')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pinecone.describe_index('tracks')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c3a479f5",
    "metadata": {},
    "outputs": [],
@@ -476,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f622b796-632b-42cd-b374-33110aae5e83",
    "metadata": {},
    "outputs": [],
@@ -530,57 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6ae4c2f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading seqmap...\n",
-      "GPU: True\n",
-      "Processing sequence 0000\n",
-      "Loading sequence 0000\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5268f0915354a9aaad8d349237d60ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/154 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing sequence 0020\n",
-      "Loading sequence 0020\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f991d23803124270b291b529414accf1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/837 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tracks_folder = '/code/kitti-mots/instances_txt'\n",
     "img_folder = '/code/kitti-mots/data_tracking_image_2/training/image_02/'\n",
@@ -599,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fafcb18a",
    "metadata": {},
    "outputs": [],
@@ -609,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fa1bc435",
    "metadata": {},
    "outputs": [],
@@ -619,41 +402,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9e770e84",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'matches': [{'id': '184-1012', 'score': 0.0, 'values': []},\n",
-       "             {'id': '183-1012', 'score': 8.79399109, 'values': []},\n",
-       "             {'id': '182-1012', 'score': 10.2688141, 'values': []},\n",
-       "             {'id': '187-1012', 'score': 11.3680267, 'values': []},\n",
-       "             {'id': '186-1012', 'score': 11.8865814, 'values': []},\n",
-       "             {'id': '185-1012', 'score': 14.087265, 'values': []},\n",
-       "             {'id': '188-1012', 'score': 15.1789856, 'values': []},\n",
-       "             {'id': '181-1012', 'score': 15.5930939, 'values': []},\n",
-       "             {'id': '548-1088', 'score': 16.9915619, 'values': []},\n",
-       "             {'id': '193-1012', 'score': 17.2358093, 'values': []},\n",
-       "             {'id': '322-1012', 'score': 18.2238, 'values': []},\n",
-       "             {'id': '600-1012', 'score': 18.4443054, 'values': []},\n",
-       "             {'id': '595-1012', 'score': 18.5437927, 'values': []},\n",
-       "             {'id': '190-1012', 'score': 19.0632782, 'values': []},\n",
-       "             {'id': '596-1012', 'score': 19.9517822, 'values': []},\n",
-       "             {'id': '607-1012', 'score': 20.1295166, 'values': []},\n",
-       "             {'id': '591-1012', 'score': 20.5048676, 'values': []},\n",
-       "             {'id': '109-1009', 'score': 20.5597687, 'values': []},\n",
-       "             {'id': '533-1012', 'score': 20.6296844, 'values': []},\n",
-       "             {'id': '194-1012', 'score': 20.7514343, 'values': []}],\n",
-       " 'namespace': 'images'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "index.query(\n",
     "  namespace=\"images\",\n",
